# perl_machine_learning

./: LICENSE  README.md  nn_1.pl  nn_1_cuda_c.pl
ML/: GPU.pm  MNIST.pm
amd_kernel/: Kernels.h  README.md
nndl_chapter_1/: README.md  nn_1.py  nn_1_pdl.pl  nn_1_rocm_c.pl
nndl_chapter_1/ML/: MNIST.pm  ROCM.pm
nndl_chapter_1/amd_kernel/: CMakeLists.txt  kernel.hip
nndl_chapter_1/inc/: node_typedef.h
nndl_chapter_2/: README.md  nn_2_cuda_c.pl  nn_2_rocm_c.pl
nndl_chapter_2/ML/: GPU.pm  MNIST.pm  ROCM.pm
nndl_chapter_2/amd_kernel/: Kernels.h  kernel.hip
nndl_chapter_3/: README.md  convert_rgb_to_greyscale.pl  mini_batch_e0000_b00001_transposed  nn_3_cuda_c.pl  nn_3_rocm.pl  nn_preload_cuda.pl  nn_preload_cuda_mini_batch.pl  nn_preload_rocm.pl
nndl_chapter_3/ML/: GPU.pm  ROCM.pm
nndl_chapter_3/amd_kernel/: CMakeLists.txt  Kernels.h  kernel.hip
